data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3855.wast
;; 4. **Recursive Imported Function Call with Incorrect Argument Types**:    - **Reasoning**: Focused on recursive calls, this test examines the handling of argument types and stack operations across recursive calls to imported functions.    - **Description**: Define an imported recursive function, call it with mismatched argument types, and observe if the recursive call respects the function's type constraints in both implementations.

(assert_invalid
  (module
    (import "env" "recursive_func" (func $recursive_func (param i32) (result i32)))
    (func (export "test_func")
      (call $recursive_func (i64.const 1))
    )
  )
  "type mismatch"
)